--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,31 +8,32 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            line-height: 1.6;
-            margin: 0;
-            padding: 0;
-            background-color: #f7f7f7;
+            text-align: center;
         }
         .container {
-            max-width: 800px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0,0,0,0.1);
+            margin-top: 100px;
         }
-        h1, p {
+        .intro-text {
+            font-size: 20px;
             margin-bottom: 20px;
+        }
+        .btn {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: #fff;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-color: #0056b3;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Welcome to Our Website</h1>
-        <p>Hello and thank you for visiting our website. We are excited to introduce ourselves and provide you with information about our services.</p>
-        <p>Our mission is to [insert mission statement here]. We strive to [describe your goals and objectives].</p>
-        <p>Feel free to explore our website to learn more about what we offer and how we can help you.</p>
-        <p>If you have any questions or would like to get in touch, please don't hesitate to contact us.</p>
+        <p class="intro-text">My name is Ali, currently doing internship in DevOps at 360 Software House.</p>
+        <button class="btn">My name is Ali</button>
     </div>
 </body>
 </html>
