--- a/index.html
+++ b/index.html
@@ -1,39 +1,49 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Introduction</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            margin-top: 100px;
-        }
-        .intro-text {
-            font-size: 20px;
-            margin-bottom: 20px;
-        }
-        .btn {
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-        .btn:hover {
-            background-color: #0056b3;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>About Me</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+    }
+    .container {
+      margin-top: 50px;
+    }
+    .intro {
+      font-size: 20px;
+      margin-bottom: 20px;
+    }
+    .hobbies {
+      font-style: italic;
+    }
+    .button {
+      padding: 10px 20px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .button:hover {
+      background-color: #45a049;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <p class="intro-text">My name is Ali, currently doing internship in DevOps at 360 Software House.</p>
-        <button class="btn">My name is Ali</button>
+  <div class="container">
+    <h1>About Me</h1>
+    <div class="intro">
+      <p>My name is Ali and I'm currently doing an internship in DevOps at 360 Software House.</p>
     </div>
+    <div class="hobbies">
+      <p>My hobbies include watching movies, reading novels, and watching cricket.</p>
+    </div>
+    <button class="button">Click to know more!</button>
+  </div>
 </body>
 </html>
