--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
       <p>My hobbies include watching movies, reading novels, and watching cricket.</p>
     </div>
     <button class="button">Click to know more!</button>
+      <button class="button">what is SonarQube</button>
+    <p>SonarQube is an open-source platform developed by SonarSource for continuous inspection of code quality to perform automatic reviews with static analysis of code to detect bugs and code smells on 29 programming languages. </p>
   </div>
 </body>
 </html>
