--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
     <div class="hobbies">
       <p>My hobbies include watching movies, reading novels, and watching cricket.</p>
+      <p>My hobbies include watching movies, reading novels, and watching cricket.</p>
     </div>
     <button class="button">Click to know more!</button>
       <button class="button">what is SonarQube</button>
